--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,24 @@
-
-astroid==2.4.2
+bcrypt==3.2.0
 certifi==2020.6.20
+cffi==1.14.3
 chardet==3.0.4
-colorama==0.4.3
+click==7.1.2
+Flask==1.1.2
+Flask-MySQL==1.5.1
+gunicorn==20.0.4
+heroku==0.1.4
 idna==2.10
-isort==5.5.2
-lazy-object-proxy==1.4.3
-mccabe==0.6.1
-pylint==2.6.0
+itsdangerous==1.1.0
+Jinja2==2.11.2
+MarkupSafe==1.1.1
+modelo==0.0.3
+pathlib==1.0.1
+Pillow==7.2.0
+pycparser==2.20
+PyMySQL==0.10.1
+python-dateutil==1.5
+reportlab==3.5.51
 requests==2.24.0
 six==1.15.0
-toml==0.10.1
 urllib3==1.25.10
-wrapt==1.12.1
+Werkzeug==1.0.1
